--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,8 +1,18 @@
-.add{
-    margin:5px 100px;
-    width: 200px;
-    border-radius: 5%;
-    height: 25px;;
-    border:solid black 3px;
+
+.todoadd{
     display: inline-block;
+    height: 30px;
+    width: 330px;
+    border: 1px solid grey;
+    border-radius: 2%;
+    margin-left:20px;
+    margin-top:20px;
+
+}
+.addbtn{
+    background-color: greenyellow;
+    font-size: 15px;
+    display: inline-block;
+    height: 30px;
+    margin-left:30px;
 }
