--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,6 @@ body{
 h1{
     margin:0 150px;
 }
-.todoContainer{
-    width:500px;
-
-    margin: 200px auto;
-    padding: 10px;
-    border: solid grey 1px;
-    border-radius: 5%;
+.card{
+    margin-left: 15px;
 }
