--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,4 @@
 .container{
-    margin:20px;
-}
-.panelA{
-    margin-left: 30px;
-    background-color: rgb(199, 189, 189);
-    width: 400px;
-    height: 400px;
-    padding: 20px;
-}
-.myactive{
-    background-color: yellowgreen;
+    margin-left: 40px;
+    margin-top: 40px;;
 }
